# logflow

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
docs/source/: conf.py  configuration.rst  usage.rst
examples/: advanced.yaml  cloud_integration.py  complex.yaml  demo.sh  demo_advanced.sh  demo_new_features.sh  generate_logs.py  generate_winlogs.py  programmatic_usage.py  run_api.py  simple.yaml  windows_logs.yaml
logflow/api/: routes.py  server.py
logflow/cli/: commands.py  web.py
logflow/core/: config.py  engine.py  models.py  pipeline.py
logflow/processors/: base.py  enrich.py  filter.py  grok.py  json.py  mutate.py  regex.py
logflow/sinks/: base.py  elasticsearch.py  file.py  opensearch.py  s3.py
logflow/sources/: base.py  file.py  kafka.py  s3.py  winlog.py
logflow/web/: __init__.py  server.py
logflow/web/static/css/: dashboard.css
logflow/web/static/js/: dashboard.js
logflow/web/templates/: dashboard.html
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_engine.py  test_file_sink.py  test_file_source.py  test_filter_processor.py  test_json_processor.py  test_models.py  test_pipeline.py
